--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     z-index: 1;
     background-color: #000;
     top: 0;
-    transition: opacity z-index 1s;
+    transition: opacity 1s ease;
 }
 
 #icon{
