--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 
 body {
     overflow: hidden;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .container {
@@ -16,7 +18,71 @@ body {
     height: 100vh;
 }
 
-.cursor{
+.infocard {
+    display: flex;
+    flex-direction: column;
+    padding: 3vw 4vw;
+    position: absolute;
+    width: 30vw;
+    height: 80vh;
+    left: 35vw;
+    top: 10vh;
+    background-color: #ffffff8d;
+    backdrop-filter: blur(20px);
+    z-index: 99;
+    border-radius: 5px;
+    transition: opacity 1s ease;
+
+}
+
+.infocard>h1 {
+    align-self: center;
+    padding-bottom: 3vw;
+}
+
+.colour {
+    width: 2vw;
+    height: 2vw;
+    border-radius: 3px;
+    border: 2px solid black;
+}
+
+#yellow {
+    background-color: #ffae42;
+}
+
+#purple {
+    background-color: #6237a0;
+}
+
+#one {
+    padding-bottom: 1.5vw;
+}
+
+.colourinfodiv {
+    display: flex;
+    gap: 2vw;
+    padding-bottom: 1vw;
+}
+
+.start{
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: large;
+    text-transform: uppercase;
+    padding: 0.5vw;
+    margin-top: 3vw;
+    align-self: center;
+    border-radius: 3px;
+    width: 15vw;
+}
+
+.start:hover{
+    background-color: #82828290;
+    transition: 0.3s;
+}
+
+.cursor {
     position: absolute;
     background-color: #fff;
     width: 1vw;
@@ -38,15 +104,16 @@ body {
     transition: opacity 2s ease;
 }
 
-.icon{
+.icon {
     position: absolute;
     width: 10vw;
     height: 10vw;
     z-index: 2;
-    opacity: 0;   /* change this to 0 */
+    opacity: 0;
+    /* change this to 0 */
 }
 
-.icon--center{
+.icon--center {
     transition: all 1s linear;
     /* marked important to override inline css being injected by js */
     opacity: 0 !important;
@@ -55,6 +122,6 @@ body {
     transform: translate(-50%, -50%) !important;
 }
 
-.icon img{
+.icon img {
     width: 10vw;
 }
