--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,15 @@ body {
 }
 
 .container {
+    width: 100vw;
+    height: 100vh;
+    transition: background-image 2s ease;
+}
+
+.container--background{
     background-image: url("../images/reveal-full.jpg");
     background-position: center;
     background-size: cover;
-    width: 100vw;
-    height: 100vh;
 }
 
 .infocard {
