--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,17 @@ body {
     background-color: #000;
 }
 
-.container {
-    width: 100vw;
+.container--outer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width:  812.5rem;
     height: 100vh;
+}
+
+.container {
+    width: 100%;
+    height: 100%;
     transition: background-image 2s ease;
 }
 
@@ -141,6 +149,9 @@ body {
 }
 
 @media (max-width: 768px) {
+    .container--outer{
+        max-width:  200rem;
+    }
 
     .cursor {
         display: none;
@@ -155,8 +166,8 @@ body {
 
     .container {
 
-        width: fit-content;
-        height: fit-content;
+        /* width: fit-content; */
+        /* height: fit-content; */
         transition: background-image 2s ease;
     }
 
