--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,10 @@
 body {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Poppins', sans-serif;
-    font-size: large;
+    font-weight: 400;
     background-color: #000;
 }
 
@@ -37,15 +37,22 @@ body {
     background-position: center;
 }
 
+.infocard-container{
+    max-width: 30rem;
+    height: 38rem; 
+    position: relative;
+}
+
 .infocard {
     display: flex;
     flex-direction: column;
-    padding: 3vw 4vw;
+    padding: 3.8rem 2rem;
     position: absolute;
-    width: 30vw;
-    height: 80vh;
-    left: 35vw;
-    top: 10vh;
+    width: 100%;
+    height: 100%;
+    left: 50vw;
+    top: 50vh;
+    transform: translate(-50%, -50%);
     background-color: #ffffff8d;
     backdrop-filter: blur(20px);
     box-shadow: 10px 10px black;
@@ -53,18 +60,34 @@ body {
     z-index: 99;
     border-radius: 5px;
     transition: opacity 1s ease;
-
 }
 
 .infocard>h1 {
     align-self: center;
-    margin-bottom: 3vw;
-    border-bottom: 5px solid black;
+    font-size: 2rem;
+    margin-bottom: 2.6rem;
+    border-bottom: 5px solid #334678; 
+}
+
+.message{
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-bottom: 1.6rem;
+}
+
+.message-icon {
+    width: 2rem;
+    display: inline;
+    vertical-align: middle;
+}
+
+.bold-text{
+    font-weight: 600;
 }
 
 .colour {
-    width: 2vw;
-    height: 2vw;
+    width: 2rem;
+    height: 2rem;
     border-radius: 3px;
     border: 3px solid black;
 }
@@ -77,14 +100,11 @@ body {
     background-color: #6237a0;
 }
 
-#one {
-    padding-bottom: 1.5vw;
-}
-
 .colourinfodiv {
     display: flex;
-    gap: 2vw;
-    padding-bottom: 1vw;
+    gap: 1.4rem;
+    align-items: center;
+    margin-bottom: 0.8rem;
 }
 
 .start {
@@ -92,12 +112,12 @@ body {
     font-weight: bold;
     font-size: large;
     text-transform: uppercase;
-    padding: 0.5vw;
-    margin-top: 3vw;
+    padding: 1rem 1.2rem;
+    margin-top: 3rem;
     align-self: center;
     border-radius: 3px;
     border: 3px solid black;
-    width: 15vw;
+    /* width: 15vw; */
 }
 
 .start:hover {
@@ -148,65 +168,28 @@ body {
     width: 10vw;
 }
 
-@media (max-width: 768px) {
-    .container--outer{
-        max-width:  200rem;
+@media (max-width: 1100px) {
+    .infocard-container{
+        max-width:  25rem;
+        height: 36rem;
+    }
+
+    .infocard h1{
+        font-size: 1.8rem;
+    }
+}
+
+@media (max-width: 600px) {
+    .infocard-container{
+        max-width:  20rem;
+        height: 34rem;
     }
 
     .cursor {
         display: none;
     }
 
-    .colour {
-        width: 3vw;
-        height: 3vw;
-        border-radius: 3px;
-        border: 3px solid black;
-    }
-
-    .container {
-
-        /* width: fit-content; */
-        /* height: fit-content; */
-        transition: background-image 2s ease;
-    }
-
-    .infocard {
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        width: fit-content;
-        height: fit-content;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #ffffff8d;
-        backdrop-filter: blur(20px);
-        box-shadow: 10px 10px black;
-        border: 5px solid black;
-        z-index: 99;
-        border-radius: 5px;
-        transition: opacity 1s ease;
-
-    }
-
-    .cover {
-        position: absolute;
-        width: 100vw;
-        height: 100vh;
-        opacity: 1;
-        z-index: 1;
-        background-color: #000;
-        top: 0;
-        transition: opacity 2s ease;
-    }
-
-    .icon {
-        position: absolute;
-        width: 20vw;
-        height: 20vw;
-        z-index: 2;
-        opacity: 0;
-        /* change this to 0*/
+    .infocard h1{
+        font-size: 1.6rem;
     }
 }
